# voxum

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
spec/app/: description.md  tech-stack.md
voxum/: __init__.py  cli.py  config.py  orchestrator.py  watcher.py
voxum/agents/: __init__.py  base.py  delivery.py  summarizer.py  transcriber.py
voxum/prompts/: summarizer.txt  transcriber.txt
voxum/tools/: __init__.py  drive.py  email.py  transcription.py
